# python-tennis-scoreboard

./: .gemini.md  .gitignore  Dockerfile.backend  Dockerfile.nginx  README.md  alembic.ini  copy_backend.py  docker-compose.yml  nginx.conf  pyproject.toml  server.py  Шорткаты исследование.md  Шорткаты.md  шорткаты Roadmap.md
migrations/: env.py
migrations/versions/: 87c612d460f2_del_player2_table.py  90c8fb248bc0_create.py  921fc55525e8_add_table_player2.py  c96aadc41f48_initial_schema_with_json_score.py  d3ef9c70ea18_del_table_test.py
src/controllers/: base_controller.py  match_controller.py
src/dao/: match_DAO.py  player_DAO.py
src/database/: connection.py
src/dto/: match_DTO.py  score_DTO.py
src/models/: base_model.py  matches.py  players.py
src/services/: exceptions.py  match_service.py  score_service.py
static/css/: style.css
static/js/: app.js
templates/: index.html  match-score.html  matches.html  new-match.html
tests/: test_score.py
